welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:6: error: value avance is not a member of Unit
		case "L" => gauche() avance();
                                     ^